-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.10.0
-
None
-
-
2c2e58577 (dev)
When running the gallery example in iOS and navigating to the TextFieldPage, when clicking inside the textfield, two context menus appear: the native one and the one from QQC. Reproducible with all styles other than the iOS style.
Recording attached.Screen Recording 2025-07-03 at 11.00.33 AM.mov![]()
- is duplicated by
-
QTBUG-138519 [iOS] Duplicated menus on long press in Text Field – app and native context menus both shown
-
- Closed
-