src/quick/items/qquicktextinput.cpp
@@ -1727,7 +1727,9 @@ bool QQuickTextInput::contextMenuEvent(QContextMenuEvent *event)
     Q_Q(QQuickTextInput);
     QContextMenuEvent mapped(event->reason(), q->cursorRectangle().center().toPoint(),
                              event->globalPos(), event->modifiers());
-    return QQuickItemPrivate::handleContextMenuEvent(&mapped);
+    const bool eventProcessed = QQuickItemPrivate::handleContextMenuEvent(&mapped);
+    event->setAccepted(mapped.isAccepted());
+    return eventProcessed;
 }
 
 bool QQuickTextInputPrivate::sendMouseEventToInputContext(QMouseEvent *event)
